Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<h2>Evenements</h2>
 							<p>Tous les jeudis après-midis.</p>
 							<ul class="actions stacked">
-								<li><a href="cana7.pdf" class="button" target="_blank">Learn More</a></li>
+								<li><a href="cana7.pdf" class="button" target="_blank">Plaquette</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -60,7 +60,7 @@
 							<h2>Initiation</h2>
 							<p>Découvrez la pêche encadrée par des experts.</p>
 							<ul class="actions stacked">
-								<li><a href="cana7.pdf" class="button" target="_blank">Learn More</a></li>
+								<li><a href="cana7.pdf" class="button" target="_blank">Plaquette</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -102,5 +102,6 @@
 
 	</body>
 </html>
+
 
 
