--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>CAN'A7</h1>
-							<p class="major">L'association étudiante de la pêche à l'ENSIACET</a>.</p>
+							<p class="major">L'association étudiante de la pêche à l'ENSIACET.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Commencer</a></li>
 							</ul>
@@ -29,14 +29,14 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Pésentation</h2>
+							<h2>Présentation</h2>
 							<p>La plaquette de présentation du club</p>
 							<ul class="actions stacked">
 								<li><a href="cana7.pdf" class="button" target="_blank">Plaquette</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight1.png" alt="" />
+							<img src="images/spotlight01.jpg" alt="" />
 						</div>
 					</section>
 
@@ -50,7 +50,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight2.jpg" alt="" />
+							<img src="images/spotlight02.jpg" alt="" />
 						</div>
 					</section>
 
@@ -64,7 +64,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight3.jpg" alt="" />
+							<img src="images/spotlight03.jpg" alt="" />
 						</div>
 					</section>
 
@@ -72,8 +72,12 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Dynamiques</h2>
-							<p>Premier Objectif : l’Initiation à la pêche, Deuxième Objectif : Environnemental et Responsable, Troisième Objectif : Communauté et challenge personnel</p>
+							<p>Premier Objectif : l'Initiation à la pêche, Deuxième Objectif : Environnemental et Responsable, Troisième Objectif : Communauté et challenge personnel</p>
 						</div>
+
+
+
+					</section>
 
 
 
@@ -81,8 +85,10 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
+								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://linkedin.com/company/cana7" class="icon brands style2 fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
@@ -102,6 +108,5 @@
 
 	</body>
 </html>
-
 
 
